res/drawable에 들어가는 사진 리소스 규칙 이름에는 영문 소문자, 숫자 또는 _ 기호만 들어가야한다.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
             android:visibility="invisible"
-            app:srcCompat="@drawable/IU01" />
+            app:srcCompat="@drawable/iu01" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
             android:visibility="visible"
-            app:srcCompat="@drawable/IU02" />
+            app:srcCompat="@drawable/iu02" />
 
 
 
